Ajuste de estilos

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row justify-content-center">
 
-                <div class="card col-10  bg-secondary card-form">
+                <div class="card col-10  card-form">
                     <div class="py-5 text-center">
                         <h3 class="card-title">Tu opinión es importante!</h3>
                     </div>
@@ -114,7 +114,8 @@
                             </div>
 
                             <!-- Submit button -->
-                            <button data-mdb-ripple-init type="submit" class="btn btn-danger btn-block mb-4">Enviar
+                            <button data-mdb-ripple-init type="submit"
+                                class="btn btn-submit text-white btn-block mb-4">Enviar
                                 opinión</button>
                         </form>
 
@@ -127,13 +128,13 @@
 
     <div class="modal fade" id="videoModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-xl">
-            <div class="modal-content">
+            <div class="modal-content modal-video">
                 <!-- Encabezado -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Detén la acción y consigue lo que ves en pantalla. ¡Haz tu serie
+                    <h2 class="modal-title">Detén la acción y consigue lo que ves en pantalla. ¡Haz tu serie
                         realidad!
-                    </h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </h2>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <!-- Cuerpo -->
                 <div class="modal-body">
@@ -155,10 +156,11 @@
                                                 escena y ahora la puedes tener en casa</p>
                                             <div class="row">
                                                 <div class="col-6 ">
-                                                    <a href="#" class="btn btn-primary">Saber más</a>
+                                                    <a href="#" class="btn btn-dark w-100">Me interesa</a>
                                                 </div>
                                                 <div class="col-6">
-                                                    <a href="#" id="btnCerrar1" class="btn btn-danger">Continuar</a>
+                                                    <a href="#" id="btnCerrar2"
+                                                        class="btn btn-danger text-white w-100">Continuar</a>
                                                 </div>
                                             </div>
 
@@ -174,15 +176,16 @@
                                         <img src="./assets/images/buzo.webp" class="card-img-top img-overlay" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Vestuario usado en la serie</h5>
-                                            <p class="card-text">Viste este que usaron este saco en esta escena?
+                                            <p class="card-text">Viste este que usaron este buzo en esta escena?
                                                 Ahora
                                                 lo puedes llevar...</p>
                                             <div class="row">
                                                 <div class="col-6 ">
-                                                    <a href="#" class="btn btn-primary">Saber más</a>
+                                                    <a href="#" class="btn btn-dark w-100">Me interesa</a>
                                                 </div>
                                                 <div class="col-6">
-                                                    <a href="#" id="btnCerrar2" class="btn btn-danger">Continuar</a>
+                                                    <a href="#" id="btnCerrar2"
+                                                        class="btn btn-danger text-white w-100">Continuar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -194,14 +197,14 @@
 
                     <!-- Pie -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-danger btn-submit" data-bs-dismiss="modal">Cerrar</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer class="py-3 bg-dark ">
+    <footer class="py-3 bg-footer">
         <p class="text-center">© 2025 Uniandes</p>
     </footer>
 
