Se agrega link a boton de tarjeta de productos

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
                                                 escena y ahora la puedes tener en casa</p>
                                             <div class="row">
                                                 <div class="col-6 ">
-                                                    <a href="#" class="btn btn-dark w-100">Me interesa</a>
+                                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfkXQZsH4K24ujNfl8jHq_VVNbAl4cn2JG0oOLuLa1_0uB6qQ/viewform"
+                                                        target="_blank" class="btn btn-dark w-100">Me interesa</a>
                                                 </div>
                                                 <div class="col-6">
                                                     <a href="#" id="btnCerrar1"
@@ -181,7 +182,8 @@
                                                 lo puedes llevar...</p>
                                             <div class="row">
                                                 <div class="col-6 ">
-                                                    <a href="#" class="btn btn-dark w-100">Me interesa</a>
+                                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfkXQZsH4K24ujNfl8jHq_VVNbAl4cn2JG0oOLuLa1_0uB6qQ/viewform"
+                                                        target="_blank" class="btn btn-dark w-100">Me interesa</a>
                                                 </div>
                                                 <div class="col-6">
                                                     <a href="#" id="btnCerrar2"
